@@ -1,6 +1,7 @@
 Changes for 2.3.2
 
 New features:
+..F....... [ZBXNEXT-2254] added support for custom PostgreSQL schema to frontend and updated setup wizard (Krists)
 ..F....... [ZBX-8329] added styling for disabled buttons and inputs (Andrejs)
 ..F....... [ZBXNEXT-2344] added links on group names in "Web monitoring" widget (Ivo)
 A.F....... [ZBX-1357] updated Brazilian Portuguese, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
